# GenAI

./: .gitignore  README.md  clip.py  main.py  metrics.py  process.ipynb  project_overview.md  pyproject.toml  vae.py
configs/: config.yaml
data/: test.csv
models/: vae.py
notebooks/: augment.ipynb  diffusion.ipynb  experiments.ipynb  gan.ipynb  vae.ipynb
outputs/: train_clip.csv
src/data/: process.ipynb
src/data/clip_audit/: clip.py
src/evaluation/: evaluate.py  vae_generate.py  vae_visualize.py
src/experiments/: run_experiments.py  run_vae_ablation.py
src/models/: diffusion.py  discriminator.py  vae.py
src/training/: train_gan.py  train_vae.py  vae_loss.py
src/utils/: augmentations.py  vae_utils.py
